--- a/defense/main.tex
+++ b/defense/main.tex
@@ -2358,10 +2358,11 @@ In a hybrid approach, SP must be able to identify\\ \textbf{valid symmetries}
 		\begin{align*}
 		\underset{\omega \in \varphi}{\bigcap}L_{\omega,\varphi} \subseteq G. %S(\varphi).
 		\end{align*}
-	
+	\visible<2->{
 	\begin{center}
 		\textbf{Guarantee that symmetrical clauses are logical consequences of the formula}
 	\end{center}
+}
 	
 \end{frame}
 
